# Elasticsearch-Python-Wrapper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
espywrapper/: __init__.py  __version__.py  const.py  utils.py
examples/: simple_lucene_query.py  simple_sql_query.py
