[metadata]
name = espywrapper
version = attr: espywrapper.__version__
author = @backchannel.re
author_email = developers@backchannel.re
url = https://github.com/backchannelinc/Elasticsearch-Python-Wrapper
description = Python package for querying Elasticsearch databases, optimized for SQL querying and dataframe usage.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, elasticsearch, sql

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas
    requests
    certifi